# ping_monitor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
resources/: resources.qrc
resources/qml/: ItemDelegate copy.qml  ItemDelegate.qml  Main.qml  MainMenu.qml  PopupDialog.qml
src/ping_monitor/: Executor.py  NetworkNode.py  NetworkNodeListModel.py  Utils.py  main.py
tests/: test_ping.py
